--- a/luyentap2.css
+++ b/luyentap2.css
@@ -66,7 +66,7 @@ header a:hover {
 }
 header #logo a {
     margin-left: 20px;
-    background-image: url(pxArt (1).jpg);
+    background-image: url(pxArt (1).png);
     background-size: cover;
     width: 90px;
     height: 50px;
